Additional JVM options analysis.